# maha-research-utils

./: .coveragerc  .flake8  .gitattributes  .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  codecov.yml  pylintrc  pyproject.toml  requirements.txt  run_tests.py  setup.cfg
.devcontainer/: devcontainer.json
.github/: codecov.yml
.github/workflows/: _get_matrix_config.yml  _matrix_output_success.yml  _matrix_status_check.yml  cicd.yml  codecov.yml  python-linting.yml  python-tests.yml  security-scan.yml  workflow_config
demo_files/: sim_results_overdamped.txt  sim_results_underdamped.txt
docs/: requirements.txt
docs/source/: conf.py  constants.rst  index.rst  spelling_wordlist.txt
mahautils/: __init__.py  __main__.py  exceptions.py  parsers.py
mahautils/dict/: dictionary.py  units.py
mahautils/dictionaries/: __init__.py  dictionary.py
mahautils/dictionary/: __init__.py  dictionary.py  exceptions.py  filedict.py
mahautils/files/: __init__.py  binaryfile.py  exceptions.py  files.py  fluidprop.py  inputdict.py  simresults.py  textfile.py  vtk.py
mahautils/generic_objects/: __init__.py  typed_list.py  typedlist.py
mahautils/multics/: __init__.py  configfile.py  constants.py  exceptions.py  fluidprop.py  polygonfile.py  simresults.py  units.py  vtk.py
mahautils/shape_designer/: __init__.py  canvas.py  layer.py
mahautils/shapes/: __init__.py  canvas.py  layer.py  plotting.py
mahautils/units/: __init__.py  exceptions.py  parser.py  unit.py  unitsystem.py
mahautils/utils/: __init__.py  arrays.py  capture_printing.py  dictionary.py  exceptions.py  filetools.py  parentheses.py  stringtools.py  vartools.py
multics/: __init__.py  exceptions.py
multics/dict/: __init__.py  dictionary.py  exceptions.py  files.py  units.py
multics/files/: __init__.py  files.py  fluidprop.py  inputdict.py  simresults.py
multics/utils/: __init__.py  vartools.py
tests/: __init__.py
tests/_sample_files/: fluid_properties_002.txt  fluid_properties_004.txt  (+26 more)
utilities/: delete_pycache_dirs.py
(+131 files in other folders)
