[metadata]
name = mahautils
# version = attr: mahautils.__version__
version = 0.0.0
description = Python tools for research at the Maha Fluid Power Research Center
long_description = file: README.md
long_description_content_type = text/markdown
author = Nathan Hess
license = AGPL-3.0
url = https://github.com/nathan-hess/maha-research-utils
project_urls =
    Documentation = https://mahautils.readthedocs.io

[options]
python_requires = >=3.8
include_package_data = True
install_requires = file: requirements.txt
packages = find:

[options.packages.find]
include =
    mahautils*
